cover more test cases and take ownership of exists yaml tests